openmediavault (5.0.1-1) unstable; urgency=low

  * Issue #340: Fix bug in Avahi NFS SLS file.
  * Issue #347: Cannot create logical volume.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 20 Apr 2019 10:34:15 +0200

openmediavault (5.0-1) unstable; urgency=low

  * Use Salt to deploy configuration settings. Using 'omv-salt stage run all'
    will deploy the whole system according to the configuration database.
  * The omv-salt CLI command superseds omv-mkconf. Note, the command
    will not only create the configuration files, it will also take care
    about to start/stop/restart the services.
  * The omv-initsystem command has been replaced by 'omv-confdbadm populate'.
    This command discovers the current system settings and synchronizes them
    into the database.
  * Default systems settings will now be applied by the Salt orchestration
    state 'omv.stage.setup'.
  * Add Time Machine support to SMB/CIFS shares.
  * Use systemd-logind to handle power button action.
  * Use systemd to reboot/shutdown/standby the system.
  * Issue #93: Use chrony instead of ntpd.
  * Issue #146: Use systemd to configure the network.
  * Issue #266: Remember size and position of windows.
  * Issue #281: Display system uptime in RRD graph.
  * Issue #302: Display reboot notification.
  * Issue #317: Remove the ability to configure Zeroconf services via UI.
    They can still be customized via environment variables.
  * Add options 'Group' and 'Owner' to rsync settings. If the 'Archive' option
    is enabled and one of its implied option 'Recursive',
    'Preserve permissions', 'Times', 'Group' or 'Owner' is disabled, then this
    option will be prefixed with '--no-xxx' in the rsync command line.
  * Remove 'Local master browser' checkbox in the SMB/CIFS page.
    If you still need that use the 'Extra Options' field to add it manually.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
