@@ -89,38 +89,23 @@ class Apt extends \OMV\Rpc\ServiceAbstract {
 	}
 
 	/**
-	 * Enumerate all packages that are to be upgraded. This list is
-	 * automatically generated via an APT trigger which is executed
-	 * when 'apt-get update' is called. Thus it is not necessary to
-	 * execute the very cost intensive code every RPC call.
+	 * Enumerate all packages that are available to be upgraded.
 	 * @param params The method parameters.
 	 * @param context The context of the caller.
-	 * @return An array of objects containing the fields \em name, \em version,
-	 *   \em oldversion, \em repository, \em architecture, \em package,
-	 *   \em priority, \em section, \em installedsize, \em maintainer,
-	 *   \em filename, \em size, \em md5sum, \em sha1, \em sha256,
-	 *   \em abstract and \em homepage. The following fields are
-	 *   optional: \em description, \em depends, \em replaces and
-	 *   \em conflicts.
+	 * @return array An array of objects containing the fields \em name,
+	 *   \em version, \em oldversion, \em repository, \em architecture,
+	 *   \em package, \em priority, \em section, \em installedsize,
+	 *   \em maintainer, \em filename, \em size, \em md5sum, \em sha1,
+	 *   \em sha256, \em abstract and \em homepage.
+	 *   The following fields are optional: \em description, \em depends,
+	 *   \em replaces and \em conflicts.
 	 */
 	function enumerateUpgraded($params, $context) {
 		// Validate the RPC caller context.
 		$this->validateMethodContext($context, [
 			"role" => OMV_ROLE_ADMINISTRATOR
 		]);
-		// Read the plugin information from the plugin index. This will
-		// be updated automatically via APT trigger.
-		$indexFile = new \OMV\Json\File(\OMV\Environment::get(
-		  "OMV_APT_UPGRADE_INDEX_FILE"));
-		if (!$indexFile->exists()) {
-			throw new \OMV\Exception(
-			  "The index of upgradeable packages does not exist. Please ".
-			  "re-synchronize the package index files from their sources.");
-		}
-		$indexFile->open("r");
-		$objects = $indexFile->read();
-		$indexFile->close();
-		return $objects;
+		return \OMV\System\System::getAptUpgradeList();
 	}
 
 	/**
