@@ -76,6 +76,9 @@ Ext.define("OMV.module.admin.dashboard.view.SysInfo", {
 							  value.value / 100, value.text);
 							result = renderer.apply(me, arguments);
 							break;
+						case "boolean":
+							result = OMV.util.Format.boolean(value);
+							break;
 						default:
 							// Nothing to do here
 							break;
@@ -124,37 +127,37 @@ Ext.define("OMV.module.admin.dashboard.view.SysInfo", {
 				"name": _("Hostname"),
 				"value": info.hostname,
 				"index": index++,
-				"type": "string",
+				"type": "string"
 			},{
 				"name": _("Version"),
 				"value": info.version,
 				"index": index++,
-				"type": "string",
+				"type": "string"
 			},{
 				"name": _("Processor"),
 				"value": info.cpuModelName,
 				"index": index++,
-				"type": "string",
+				"type": "string"
 			},{
 				"name": _("Kernel"),
 				"value": info.kernel,
 				"index": index++,
-				"type": "string",
+				"type": "string"
 			},{
 				"name": _("System time"),
 				"value": info.time,
 				"index": index++,
-				"type": "string",
+				"type": "string"
 			},{
 				"name": _("Uptime"),
 				"value": info.uptime,
 				"index": index++,
-				"type": "string",
+				"type": "string"
 			},{
 				"name": _("Load average"),
 				"value": info.loadAverage,
 				"index": index++,
-				"type": "string",
+				"type": "string"
 			},{
 				"name": _("CPU usage"),
 				"value": {
@@ -162,7 +165,7 @@ Ext.define("OMV.module.admin.dashboard.view.SysInfo", {
 					"value": info.cpuUsage
 				},
 				"index": index++,
-				"type": "progress",
+				"type": "progress"
 			},{
 				"name": _("Memory usage"),
 				"value": {
@@ -171,7 +174,12 @@ Ext.define("OMV.module.admin.dashboard.view.SysInfo", {
 					"value": info.memUsed / info.memTotal
 				},
 				"index": index++,
-				"type": "progress",
+				"type": "progress"
+			},{
+				"name": _("Updates available"),
+				"value": info.pkgUpdatesAvailable,
+				"index": index++,
+				"type": "boolean"
 			}]);
 		}
 	}
